--- a/web/package.json
+++ b/web/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "chart.js": "^2.8.0",
+    "highcharts": "^7.2.0",
+    "highcharts-react-official": "^2.2.2",
     "react": "^16.9.0",
-    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
