--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "rxjs": "^6.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
