--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "@ngrx/effects": "^8.4.0",
+    "@ngrx/router-store": "^8.5.2",
     "@ngrx/store": "^8.4.0",
+    "@ngrx/store-devtools": "^8.5.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
