--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,8 @@
     "@ngrx/router-store": "^8.5.2",
     "@ngrx/store": "^8.4.0",
     "@ngrx/store-devtools": "^8.5.2",
+    "angular-highcharts": "^8.0.3",
+    "highcharts": "^7.2.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
